--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "goit-js-hw-10",
+  "name": "goit-js-hw-11",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://github.com/Lawyer0901/goit-js-hw-10/",
+  "homepage": "https://github.com/Lawyer0901/goit-js-hw-11/",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-09/"
+    "build": "parcel build src/*.html --public-url /goit-js-hw-11/"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@vimeo/player": "^2.18.0",
+    "axios": "^1.2.0",
     "flatpickr": "^4.6.13",
     "gh-pages": "^4.0.0",
     "lodash.debounce": "^4.0.8",
@@ -29,6 +30,7 @@
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
+    "buffer": "^6.0.3",
     "parcel": "^2.6.0",
     "parcel-reporter-clean-dist": "^1.0.4",
     "posthtml-include": "^1.7.4"
